syntax = "proto3";

import "admin/user_token.proto";

package managetenant;

service ManageTenantService {
    rpc GetTenant (GetTenantRequest) returns (GetTenantResponse);
    rpc Verify (VerifyRequest) returns (VerifyResponse);
    rpc SetTenantStage (SetTenantStageRequest) returns (SetTenantStageResponse);
    rpc SetTenantDomain (SetTenantDomainRequest) returns (FullTenantProfileResponse);
}

message TenantAcc {
    string email = 1;
    string username = 2;
    string role = 3;
    string domain = 4;
    bool is_deleted = 5;
    bool is_active = 6;
    bool is_verified = 7;
    bool is_rejected = 8;
    string created_at = 9;
}

message TenantProfileAcc {
    string username = 1;
    string email = 2;
    string phone = 3;
    string gender = 4;
    string address = 5;
    int32 age = 6;
    string avatar = 7;
    string name = 8;
    string stage = 9;
    string company_name = 10;
    string company_address = 11;
    string created_at = 12;
    bool is_verify = 13;
    string description = 14;
    string domain = 15;
}

message GetTenantRequest {
    userToken.User user = 1;
    optional bool is_active = 2;
    optional bool is_verified = 3;
    optional bool is_rejected = 4;
}

message GetTenantResponse {
    repeated FullTenantProfileResponse tenant = 1;
}

message VerifyRequest {
    userToken.User user = 1;
    string email = 2;
    bool is_verify = 3;
}

message VerifyResponse {
    TenantAcc tenant = 1;
}

message SetTenantStageRequest {
    userToken.User user = 1;
    string email = 2;
    string stage = 3;
}

message SetTenantStageResponse {
    TenantProfileAcc tenantprofile = 1;
}

message SetTenantDomainRequest{
    userToken.User user = 1;
    string email = 2;
    string domain = 3;
}

message FullTenantProfileResponse{
    TenantAcc tenant = 1;
    TenantProfileAcc tenant_profile = 2;
}