syntax = "proto3";

import "admin/user_token.proto";

package tenant;

service TenantService {
    rpc GetTenant (GetTenantRequest) returns (GetTenantResponse);
    rpc Verify (VerifyRequest) returns (VerifyResponse);
    rpc SetTenantStage (SetTenantStageRequest) returns (SetTenantStageResponse);
}

message Tenant {
    string email = 1;
    string username = 2;
    string role = 3;
    string domain = 4;
    string is_deleted = 5;
    string is_active = 6;
    string is_verified = 7;
    string is_rejected = 8;
    string created_at = 9;
}

message TenantProfile {
    string username = 2;
    string email = 3;
    string phone = 4;
    string gender = 5;
    string address = 6;
    int32 age = 7;
    string avatar = 8;
    string name = 9;
    string stage = 10;
    string created_at = 11;
    string is_verify = 12;
}

message GetTenantRequest {
    userToken.User user = 1;
    optional string type = 2;
}

message GetTenantResponse {
    repeated Tenant tenant = 1;
}

message VerifyRequest {
    userToken.User user = 1;
    string domain = 2;
    string email = 3;
    string is_verify = 4;
}

message VerifyResponse {
    Tenant tenant = 1;
}

message SetTenantStageRequest {
    userToken.User user = 1;
    string email = 2;
    string domain = 3;
    string stage = 4;
}

message SetTenantStageResponse {
    TenantProfile tenantprofile = 1;
}