syntax = "proto3";

import "admin/manage_tenant.proto";
import "services/tenant/tenant.proto";
import "services/tenant/tenantProfile.proto";

package admin;

service AppService {
  rpc FindOne (HeroById) returns (Hero) {}
}

message HeroById {
  int32 id = 1;
}

message Hero {
  int32 id = 1;
  string name = 2;
}